[package]
name = "pastbook2"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
027 = { alias = "past201912_m", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_m" }
034 = { alias = "past202012_m", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_m" }
045 = { alias = "abc236_e", problem = "https://atcoder.jp/contests/abc236/tasks/abc236_e" }
056 = { alias = "dp_d", problem = "https://atcoder.jp/contests/dp/tasks/dp_d" }
061 = { alias = "typical90_h", problem = "https://atcoder.jp/contests/typical90/tasks/typical90_h" }
065 = { alias = "joi2014yo_d", problem = "https://atcoder.jp/contests/joi2014yo/tasks/joi2014yo_d" }
070 = { alias = "past202004_k", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_k" }
078 = { alias = "pastbook2022_a", problem = "https://atcoder.jp/contests/pastbook2022/tasks/pastbook2022_a" }
082 = { alias = "joi2016ho_a", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_a" }
085 = { alias = "pastbook2022_b", problem = "https://atcoder.jp/contests/pastbook2022/tasks/pastbook2022_b" }

[[bin]]
name = "027"
path = "src/bin/027.rs"

[[bin]]
name = "034"
path = "src/bin/034.rs"

[[bin]]
name = "045"
path = "src/bin/045.rs"

[[bin]]
name = "056"
path = "src/bin/056.rs"

[[bin]]
name = "061"
path = "src/bin/061.rs"

[[bin]]
name = "065"
path = "src/bin/065.rs"

[[bin]]
name = "070"
path = "src/bin/070.rs"

[[bin]]
name = "078"
path = "src/bin/078.rs"

[[bin]]
name = "082"
path = "src/bin/082.rs"

[[bin]]
name = "085"
path = "src/bin/085.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
