[package]
name = "pastbook2"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
027 = { alias = "past201912_m", problem = "https://atcoder.jp/contests/past201912-open/tasks/past201912_m" }
034 = { alias = "past202012_m", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_m" }
045 = { alias = "abc236_e", problem = "https://atcoder.jp/contests/abc236/tasks/abc236_e" }
056 = { alias = "dp_d", problem = "https://atcoder.jp/contests/dp/tasks/dp_d" }
061 = { alias = "typical90_h", problem = "https://atcoder.jp/contests/typical90/tasks/typical90_h" }
065 = { alias = "joi2014yo_d", problem = "https://atcoder.jp/contests/joi2014yo/tasks/joi2014yo_d" }
070 = { alias = "past202004_k", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_k" }
078 = { alias = "pastbook2022_a", problem = "https://atcoder.jp/contests/pastbook2022/tasks/pastbook2022_a" }
082 = { alias = "joi2016ho_a", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_a" }
085 = { alias = "pastbook2022_b", problem = "https://atcoder.jp/contests/pastbook2022/tasks/pastbook2022_b" }
090 = { alias = "dp_n", problem = "https://atcoder.jp/contests/dp/tasks/dp_n" }
094 = { alias = "tdpc_iwi", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_iwi" }
098 = { alias = "typical_algorithm_c", problem = "https://atcoder.jp/contests/typical-algorithm/tasks/typical_algorithm_c" }
102 = { alias = "dp_o", problem = "https://atcoder.jp/contests/dp/tasks/dp_o" }
105 = { alias = "joi2017yo_d", problem = "https://atcoder.jp/contests/joi2017yo/tasks/joi2017yo_d" }
110 = { alias = "joisc2010_stairs", problem = "https://atcoder.jp/contests/joisc2010/tasks/joisc2010_stairs" }
115 = { alias = "dp_m", problem = "https://atcoder.jp/contests/dp/tasks/dp_m" }
118 = { alias = "abc183_e", problem = "https://atcoder.jp/contests/abc183/tasks/abc183_e" }
123 = { alias = "dp_r", problem = "https://atcoder.jp/contests/dp/tasks/dp_r" }
128 = { alias = "tdpc_house", problem = "https://atcoder.jp/contests/tdpc/tasks/tdpc_house" }
133 = { alias = "past202104_n", problem = "https://atcoder.jp/contests/past202104-open/tasks/past202104_n" }
137 = { alias = "dp_x", problem = "https://atcoder.jp/contests/dp/tasks/dp_x" }
143 = { alias = "pastbook2022_c", problem = "https://atcoder.jp/contests/pastbook2022/tasks/pastbook2022_c" }
146 = { alias = "dp_p", problem = "https://atcoder.jp/contests/dp/tasks/dp_p" }
149 = { alias = "dp_s", problem = "https://atcoder.jp/contests/dp/tasks/dp_s" }
154 = { alias = "dp_u", problem = "https://atcoder.jp/contests/dp/tasks/dp_u" }
158 = { alias = "past202012_k", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_k" }
163 = { alias = "dp_t", problem = "https://atcoder.jp/contests/dp/tasks/dp_t" }
168 = { alias = "abc085_c", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_c" }
171 = { alias = "arc084_a", problem = "https://atcoder.jp/contests/abc077/tasks/arc084_a" }
174 = { alias = "past202109_m", problem = "https://atcoder.jp/contests/past202109-open/tasks/past202109_m" }
179 = { alias = "abc032_c", problem = "https://atcoder.jp/contests/abc032/tasks/abc032_c" }
184 = { alias = "abc229_d", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_d" }
186 = { alias = "arc098_b", problem = "https://atcoder.jp/contests/abc098/tasks/arc098_b" }
191 = { alias = "abc217_e", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_e" }
195 = { alias = "abc189_c", problem = "https://atcoder.jp/contests/abc189/tasks/abc189_c" }
208 = { alias = "unionfind_a", problem = "https://atcoder.jp/contests/atc001/tasks/unionfind_a" }
211 = { alias = "arc065_b", problem = "https://atcoder.jp/contests/arc065/tasks/arc065_b" }
214 = { alias = "abc040_d", problem = "https://atcoder.jp/contests/abc040/tasks/abc040_d" }
# xxx = { alias = "", problem = "" }


[[bin]]
name = "027"
path = "src/bin/027.rs"

[[bin]]
name = "034"
path = "src/bin/034.rs"

[[bin]]
name = "045"
path = "src/bin/045.rs"

[[bin]]
name = "056"
path = "src/bin/056.rs"

[[bin]]
name = "061"
path = "src/bin/061.rs"

[[bin]]
name = "065"
path = "src/bin/065.rs"

[[bin]]
name = "070"
path = "src/bin/070.rs"

[[bin]]
name = "078"
path = "src/bin/078.rs"

[[bin]]
name = "082"
path = "src/bin/082.rs"

[[bin]]
name = "085"
path = "src/bin/085.rs"

[[bin]]
name = "090"
path = "src/bin/090.rs"

[[bin]]
name = "094"
path = "src/bin/094.rs"

[[bin]]
name = "102"
path = "src/bin/102.rs"

[[bin]]
name = "105"
path = "src/bin/105.rs"

[[bin]]
name = "110"
path = "src/bin/110.rs"

[[bin]]
name = "115"
path = "src/bin/115.rs"

[[bin]]
name = "118"
path = "src/bin/118.rs"

[[bin]]
name = "123"
path = "src/bin/123.rs"

[[bin]]
name = "128"
path = "src/bin/128.rs"

[[bin]]
name = "133"
path = "src/bin/133.rs"

[[bin]]
name = "137"
path = "src/bin/137.rs"

[[bin]]
name = "143"
path = "src/bin/143.rs"

[[bin]]
name = "146"
path = "src/bin/146.rs"

[[bin]]
name = "149"
path = "src/bin/149.rs"

[[bin]]
name = "154"
path = "src/bin/154.rs"

[[bin]]
name = "158"
path = "src/bin/158.rs"

[[bin]]
name = "163"
path = "src/bin/163.rs"

[[bin]]
name = "168"
path = "src/bin/168.rs"

[[bin]]
name = "171"
path = "src/bin/171.rs"

[[bin]]
name = "174"
path = "src/bin/174.rs"

[[bin]]
name = "179"
path = "src/bin/179.rs"

[[bin]]
name = "184"
path = "src/bin/184.rs"

[[bin]]
name = "186"
path = "src/bin/186.rs"

[[bin]]
name = "191"
path = "src/bin/191.rs"

[[bin]]
name = "195"
path = "src/bin/195.rs"

[[bin]]
name = "208"
path = "src/bin/208.rs"

[[bin]]
name = "211"
path = "src/bin/211.rs"

[[bin]]
name = "214"
path = "src/bin/214.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
